--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ license = ""
 repository = ""
 default-run = "app"
 edition = "2021"
-rust-version = "1.59"
+rust-version = "1.66.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,8 +17,15 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.3", features = ["api-all"] }
-zip = "0.6.3"
+tauri = { version = "1.2.4", features = ["dialog-all", "window-all"] }
+
+[dependencies.windows]
+version = "0.44.0"
+features = [
+    "Data_Xml_Dom",
+    "Foundation",
+    "Storage"
+]
 
 [features]
 # by default Tauri runs in production mode
