--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.4", features = ["dialog-all", "window-all"] }
+window-shadows = "0.2.1"
+winit = "0.27.5"
 
 [dependencies.windows]
 version = "0.44.0"
