--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,32 +7,21 @@ license = ""
 repository = ""
 default-run = "app"
 edition = "2021"
-rust-version = "1.66.1"
+rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2.1", features = [] }
+tauri-build = { version = "1.3.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["dialog-all", "window-all"] }
+tauri = { version = "1.3.0", features = ["dialog-all", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 window-shadows = "0.2.1"
-winit = "0.27.5"
-
-[dependencies.windows]
-version = "0.44.0"
-features = [
-    "Data_Xml_Dom",
-    "Foundation",
-    "Storage"
-]
 
 [features]
-# by default Tauri runs in production mode
-# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
-# this feature is used for production builds where `devPath` points to the filesystem
-# DO NOT remove this
+# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
+# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
+# DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
